Prediction based on the stock + market is much better than just stock

--- a/Finance_V2/data_preprocessing.ipynb
+++ b/Finance_V2/data_preprocessing.ipynb
@@ -47,9 +47,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "COLUMN_NAMES"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -901,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1064,
+   "execution_count": 1073,
    "metadata": {},
    "outputs": [
     {
@@ -923,6 +921,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\zackx\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:922: UserWarning: One or more of the test scores are non-finite: [nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan nan nan]\n",
+      "  warnings.warn(\n",
       "c:\\Users\\zackx\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:880: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  self.best_estimator_.fit(X, y, **fit_params)\n"
      ]
@@ -941,7 +942,7 @@
        "                   random_state=520, verbose=4)"
       ]
      },
-     "execution_count": 1064,
+     "execution_count": 1073,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1065,
+   "execution_count": 1074,
    "metadata": {},
    "outputs": [
     {
@@ -1005,17 +1006,17 @@
       "Best Parameters:  {'n_estimators': 1000, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'auto', 'max_depth': 3, 'bootstrap': False}  \n",
       "\n",
       "\n",
-      "0.5403274317579542\n",
+      "nan\n",
       "{'n_estimators': 1000, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'auto', 'max_depth': 3, 'bootstrap': False}\n",
       "0.7973640856672158\n",
       "[[154 123]\n",
       " [  0 330]]\n",
-      "0.46875\n",
-      "[[ 4 49]\n",
+      "0.5104166666666666\n",
+      "[[ 8 45]\n",
       " [ 2 41]]\n",
-      "0.47\n",
-      "[[ 7 35]\n",
-      " [18 40]]\n"
+      "0.46\n",
+      "[[10 32]\n",
+      " [22 36]]\n"
      ]
     }
    ],
